--- a/app/views/help-partial-views/faq1.html
+++ b/app/views/help-partial-views/faq1.html
@@ -1,1 +1,25 @@
-<h1>boom shaakalalkka</h1>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">How to Create a Link to Your Desktop</h3>
+  </div>
+  <div class="panel-body" style="font-size:12px;">
+<p>
+     <strong>Step One:</strong><br>
+Right click on your desktop, choose NEW, then SHORTCUT
+</p>
+    
+<strong>Step Two:</strong><br>
+<p>On the text box, copy the url that was emailed to you. (If you need the url, please email request to help@collectorsolutions.com)
+
+Paste the url into the text box (shown below), and click on NEXT<br/><br/>
+      <img src="images/step2.jpg" class="img-responsive" style="padding-top:25px; height:auto; width:auto;" alt="create shortcut step 2"/>
+      
+</p><br/>
+<strong>Step Three:</strong><br>
+<p>Type the name (i.e. CSI Management Console )you want to give it in the text box. (see below), then click on FINISH.<br/><br/>
+<img src="images/step3.jpg" class="img-responsive" style="padding-top:25px; height:auto; width:auto;" alt="create shortcut step 3"/>
+<br/>
+An icon is created, and placed on your desktop.
+Now, click on that icon to open the CollectorSolutions Management Console.</p>
+  </div>
+</div>
