--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -86,18 +86,20 @@
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.2); }
 
 body {
-  overflow-x: hidden !important;
+/*  overflow-x: hidden !important;*/
   background-color: #fff; 
-background-image: url("../images/bg2.jpg");
+  background-image: url("../images/bg2.jpg");
 }
 
 html, body {
   height: 100%; 
 /*  -ms-overflow-style: none !important; */
 }
+/*
 @-ms-viewport {
     width: auto;
 }
+*/
 @media (max-width: 768px) {
 .center-block{
     float:none;
@@ -124,7 +126,8 @@ html, body {
 .title-feed span {
   text-shadow: 1px 1px 1px #000;
   font-size: 48px;
-  line-height: 1; }
+  line-height: 1; 
+}
 
 .title-feed {
   height: auto;
